[package]
name = "filcrypto"
description = "FFI Interface to Filecoin Proofs"
version = "0.7.4"
authors = ["laser <l@s3r.com>", "sbw <sbw@sbw.so>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sbwtw/filecoin-ffi"
readme = "README.md"
edition = "2018"
publish = false

[profile.release]
lto = true

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
bls-signatures = "0.6.0"
byteorder = "1.2"
drop_struct_macro_derive = "0.4.0"
ff = { version = "0.2.1", package = "fff" }
ffi-toolkit = "0.4.0"
libc = "0.2.58"
log = "0.4.7"
paired = "0.20.0"
fil_logger = "0.1.0"
rand = "0.7"
rand_chacha = "0.2.1"
rayon = "1.2.1"
anyhow = "1.0.23"
bellperson = { version = "0.9.2", features = ["gpu"] }
serde_json = "1.0.46"
serde = "^1.0"
lazy_static = "^1.4"
reqwest = { version = "^0.10", features = ["blocking", "json"] }
tarpc = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }
tokio-serde = { version = "*", features = ["json"] }

[dependencies.filecoin-proofs-api]
package = "filecoin-proofs-api"
version = "4.0.2"

[dependencies.filecoin-webapi]
git = "https://github.com/sbwtw/Filecoin-webapi"
rev = "81a1568"
#path = "../../Filecoin-webapi"

[build-dependencies]
cbindgen = "= 0.14.0"

[dev-dependencies]
tempfile = "3.0.8"

